[gd_scene load_steps=5 format=3 uid="uid://rkdcxfm37rba"]

[ext_resource type="Script" path="res://Mechanics and Assets/Black Hole.gd" id="1_ulnlc"]
[ext_resource type="Texture2D" uid="uid://cl7npy2d06b0s" path="res://Mechanics and Assets/BlackHole.png" id="2_pe1lt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t6cet"]
radius = 41.65

[sub_resource type="CircleShape2D" id="CircleShape2D_svhxa"]
radius = 1000.0

[node name="Black Hole" type="Area2D"]
script = ExtResource("1_ulnlc")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_pe1lt")

[node name="EventHorizon" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t6cet")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Gravitation" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_svhxa")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
